--- a/README.html
+++ b/README.html
@@ -133,7 +133,7 @@ install_github(&#39;fawda123/Jabbrev&#39;)</code></pre>
 <pre class="r"><code>abbrev(&#39;Journal of Applied Mathematics&#39;)</code></pre>
 <pre><code>## [1] &quot;J. Appl. Math.&quot;</code></pre>
 <p>Or convert a whole .bib file:</p>
-<pre class="r"><code>bib_shr(&#39;refs2.bib&#39;)</code></pre>
+<pre class="r"><code>bib_shr(&#39;inst/refs2.bib&#39;)</code></pre>
 <pre><code>## 1 of 30 Fundamental and Applied Limnology - Fundam. Appl. Limnol. 
 ## 2 of 30 Aquatic Botany - Aquat. Bot. 
 ## 3 of 30 Limnology and Oceanography - Limnol. Oceanogr. 
