--- a/README.html
+++ b/README.html
@@ -125,6 +125,7 @@ $(document).ready(function () {
 <h2>Jabbrev</h2>
 <div id="marcus-w.-beck-mbafs2012gmail.com" class="section level4">
 <h4><em>Marcus W. Beck, <a href="mailto:mbafs2012@gmail.com">mbafs2012@gmail.com</a></em></h4>
+<p><a href="https://travis-ci.org/fawda123/Jabbrev"><img src="https://travis-ci.org/fawda123/Jabbrev.svg?branch=master" alt="Travis-CI Build Status" /></a> <a href="https://ci.appveyor.com/project/fawda123/Jabbrev"><img src="https://ci.appveyor.com/api/projects/status/github/fawda123/Jabbrev?branch=master&amp;svg=true" alt="AppVeyor Build Status" /></a></p>
 <p>This R package converts a journal name (or any text) to abbreviations using the ISSN List of Title Word Abbreviations (<a href="http://www.issn.org/services/online-services/access-to-the-ltwa/%3E">LTWA</a>). Some journals insist that journal names in bibliographies are abbreviated. This is dumb so here’s a package that does it for you.</p>
 <pre class="r"><code>install.packages(&#39;devtools&#39;)
 library(devtools)
